--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
   <application
       android:allowBackup="true"
       android:label="Recetas Gemini"
-      android:theme="@style/Theme.RecetasGemini">
+      android:theme="@style/Theme.RecetasGemini"
+      android:icon="@mipmap/ic_launcher"
+      android:roundIcon="@mipmap/ic_launcher_round"
+      android:supportsRtl="true"
+      >
 
     <activity
         android:name="com.karla.recetas.MainActivity"
